cloud/w8/day-b/01-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: nginx-pod
    labels:
        app: nginx
spec:
    containers:
        - name: nginx
          image: nginx:1.25
          ports:
              - containerPort: 80
