cloud/w8/day-b/05-configmap-secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-with-config
spec:
    replicas: 1
    selector:
        matchLabels:
            app: nginx-config
    template:
        metadata:
            labels:
                app: nginx-config
        spec:
            containers:
                - name: nginx
                  image: nginx:1.25
