cloud/w8/day-b/06-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: nginx-network-policy
spec:
    podSelector:
        matchLabels:
            app: nginx-config
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
              - podSelector:
                    matchLabels:
                        app: nginx-probes
          ports:
              - protocol: TCP
                port: 80
    egress:
        - {}
